--- a/rtpengine/rtpengine.conf
+++ b/rtpengine/rtpengine.conf
@@ -1,13 +1,25 @@
 [rtpengine]
-interface=MY_IP
+# 监听IP地址,至少设置一个, 以!分隔, e.g. [NAME]IP[!IP]
+interface=192.168.61.71
 foreground=true
+# 将日志输出到标准错误流(stderr)而不是系统日志(syslog), 仅与–foreground组合使用
 log-stderr=true
-listen-ng=MY_IP:22222
-port-min=23000
-port-max=32768
+# 管理端口, kamailio连接本端口管理, e.g. [IP46:]PORT
+listen-ng=192.168.61.71:22222
+# rtp起始端口
+port-min=61000
+# rtp结束端口
+port-max=61100
+# 指定PCAP记录文件和记录元数据文件应存储的目录的路径
 recording-dir=/tmp
+# 支持多种通话记录方法, 此选项可用于选择一种. 目前支持的方法有pcap, proc和all. 默认方法是pcap
 recording-method=pcap
+# 以raw(default)格式录制到pcap文件时, 没有以太网头, 当设置为eth时, 会添加一个假以太网头, 使每个包大14个字节
 recording-format=eth
 log-level=6
+# 从内存中删除指定延迟后的呼叫, 可以设置为零以立即删除呼叫
 delete-delay=0
-listen-http=MY_IP:8080
+# 在进行DTLS操作时使用被动模式
+dtls-passive=true
+#启用http侦听或websocket连接, eg. [IP|HOSTNAME:]PORT
+listen-http=192.168.61.71:28080
